# playingWithAlignment

./: CMakeLists.txt  Makefile  README.md  demonstrateCompilerAlignment.cpp  speedTest.cpp
